# ACS_Roman_Khan_HWs

ДЗ1 Хан Роман Олегович БПИ207/Answers/Test1/: output2.txt
ДЗ1 Хан Роман Олегович БПИ207/Answers/Test3/: output1.txt
ДЗ1 Хан Роман Олегович БПИ207/Program/: CMakeLists.txt  cicrle.c  circle.h  container.c  container.h  exceptions.c  exceptions.h  main.c  point.h  random.c  random.h  rectangle.c  rectangle.h  shape.c  shape.h  triangle.c  triangle.h
ДЗ1 Хан Роман Олегович БПИ207/Program/Answers/Test1/: output1.txt
ДЗ1 Хан Роман Олегович БПИ207/Program/Answers/Test4/: output1.txt  output2.txt
ДЗ1 Хан Роман Олегович БПИ207/Program/Answers/Test5/: output2.txt
ДЗ1 Хан Роман Олегович БПИ207/Program/Tests/: test05.txt
ДЗ1 Хан Роман Олегович БПИ207/Tests/: test01.txt  test03.txt
ДЗ2 Хан Роман Олегович БПИ207/Answers/Test3/: output2.txt
ДЗ2 Хан Роман Олегович БПИ207/Answers/Test4/: output1.txt
ДЗ2 Хан Роман Олегович БПИ207/Answers/Test5/: output1.txt
ДЗ2 Хан Роман Олегович БПИ207/Program/: CMakeLists.txt  ReadMe
ДЗ2 Хан Роман Олегович БПИ207/Program/headers/: circle.h  container.h  exceptions.h  point.h  random.h  rectangle.h  shape.h  testGenerator.h  triangle.h
ДЗ2 Хан Роман Олегович БПИ207/Program/source/: cicrle.cpp  container.cpp  exceptions.cpp  main.cpp  random.cpp  rectangle.cpp  shape.cpp  testGenerator.cpp  triangle.cpp
ДЗ2 Хан Роман Олегович БПИ207/Tests/: test01.txt  test04.txt
ДЗ3 Хан Роман Олегович БПИ207/: Пояснительная записка БПИ207 Хан Роман Олегович - Copy.docx
ДЗ3 Хан Роман Олегович БПИ207/Answers/: output1.txt  output2.txt  output3.txt  output4.txt
ДЗ3 Хан Роман Олегович БПИ207/Program/: ReadMe.txt  circle.py  container.py  exceptions.py  extender.py  generatorAndWriter.py  main.py  point.py  rectangle.py  shape.py  triangle.py
ДЗ3 Хан Роман Олегович БПИ207/Tests/: test03.txt  test04.txt
ДЗ5 Хан Роман Олегович БПИ207/: Пояснительная записка БПИ207 Хан Роман Олегович.docx
ДЗ5 Хан Роман Олегович БПИ207/Program/: CMakeLists.txt  buffer.h  main.c  print.c  print.h
ДЗ5 Хан Роман Олегович БПИ207/inputs/: test1.txt  test4.txt  test5.txt  test6.txt  test7.txt
ДЗ5 Хан Роман Олегович БПИ207/outputs/: output1.txt  output3.txt  output4.txt  output5.txt  output6.txt
